<resources>
    <string name="app_name">performance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nomeutente">nomeutente</string>
    <string name="nomeutente_gmail_com">nomeutente@gmail.com</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="PERFORMANCE">PERFORMANCE</string>
    <string name="appunti">appunti</string>
    <string name="note">note</string>
    <string name="news">news</string>
    <string name="media">media</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="calendar">calendar</string>
    <string name="to_do_list">to do list</string>

</resources>