<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todolist"
            android:icon="@drawable/ic_baseline_assignment_turned_in_24"
            android:title="to do list" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/note"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/media"
            android:title="@string/media" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news" />
    </group>
</menu>