<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiante"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="1500dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        tools:srcCompat="@drawable/logo_app"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress5"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_users"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTextTextEmailAddress5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints="@string/password" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextTextPassword4"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardMaxElevation="10dp"
        android:layout_marginTop="68dp"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/log_in"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
